# deepmd-gnn

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  noxfile.py  pyproject.toml  renovate.json
.github/workflows/: mirror-gitlab.yaml  release.yaml  test.yaml
build_backend/: __init__.py  dp_backend.py
deepmd_gnn/: __init__.py  argcheck.py  env.py  mace.py  nequip.py  op.py
deepmd_mace/: __init__.py  __main__.py  _version.py  argcheck.py  mace.py  nequip.py  op.py
examples/: .gitignore
examples/dprc/mace/: input.json
examples/dprc/nequip/: input.json
examples/water/mace/: input.json
examples/water/nequip/: input.json
op/: CMakeLists.txt  edge_index.cc  mace.cc
python_template/: __init__.py
tests/: input.json  test_examples.py  test_model.py  test_op.py  test_training.py  test_version.py
